# bold

./: .nfs00000000e02311f300000021  .nfs00000000e0328a2e00000020  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  GenName.cpp  GenName.h  LICENSE  Makefile  Music_example.cpp  README.md  a.out  battle.cpp  battle.h  battleField.cpp  battleField.hpp  character.cpp  character.h  character.hpp  cmake_install.cmake  game.cpp  gray.cpp  keytest.cpp  kobold.hpp  kobold.hpp.gch  linegen.cpp  linegen2.cpp  main.cpp  map.cpp  map.cpp~  map.hpp  map.hpp~  maptest.cpp  nano.save  quad.c  red.c  seedTest.cpp  structs.hpp  test  test.cpp  (+16 more)
include/: a.out  battleField.hpp~  map.hpp  map.hpp~  playerSpace.hpp  playerSpace.hpp~  testEnv.cpp  testEnv.hpp  tile.hpp  toolkit.hpp  toolkit.hpp~  worldMap.hpp  worldMap.hpp~
libs/: libstdc++.so.6.0.21  libsystemd.so.0.14.0  libwayland-egl.so.1.0.0
libs/16.04/: libSDL2_image-2.0.so.0.0.1  libsndfile.so.1.0.25
src/: .nfs00000001a151ce54000000b3  a.out  battleField.cpp  battleField.cpp~  map.cpp  map.cpp~  maptest.cpp  maptest.cpp~  playerSpace.cpp  playerSpace.cpp~  randTest.cpp  tile.cpp  tile.cpp~  toolkit.cpp  toolkit.cpp~  worldMap.cpp  worldMap.cpp~
